--- a/source/ui.html
+++ b/source/ui.html
@@ -109,7 +109,12 @@
 
     <address>
 
-      <p><strong>Company Name <br></strong>Address <br>Zip <br>Country <br></p>
+      <p>
+        <strong>Company Name</strong><br>
+        Address <br>
+        Zip <br>
+        Country <br>
+      </p>
 
     </address>
 
@@ -120,11 +125,8 @@
     <h3>Quotations</h3>
 
     <blockquote>
-
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-
       <cite>Source</cite>
-
     </blockquote>
 
     <q>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, repellat!</q>
@@ -151,10 +153,8 @@
     <h3>Details</h3>
 
     <details>
-
       <summary>Summary goes here</summary>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, repellat!</p>
-
     </details>
 
   </section>
@@ -181,9 +181,7 @@
     <div class="media">
 
       <figure class="media__obj media__obj--left">
-
         <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
-
       </figure>
 
       <div class="media__body">
@@ -201,9 +199,7 @@
     <div class="media">
 
       <figure class="media__obj media__obj--right">
-
         <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
-
       </figure>
 
       <div class="media__body">
@@ -221,9 +217,7 @@
     <div class="media media--center">
 
       <figure class="media__obj media__obj--right">
-
         <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
-
       </figure>
 
       <div class="media__body">
@@ -241,9 +235,7 @@
     <div class="media">
 
       <figure class="media__obj media__obj--left">
-
         <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
-
       </figure>
 
       <div class="media__body">
@@ -255,9 +247,7 @@
         <div class="media">
 
           <figure class="media__obj media__obj--left">
-
             <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
-
           </figure>
 
           <div class="media__body">
@@ -278,10 +268,11 @@
 
   <section id="lists">
 
+    <h2>Lists</h2>
+
     <h3>Unorderd List</h3>
 
     <ul class="list">
-
       <li>List Item 1</li>
       <li>List Item 2
         <ul>
@@ -293,7 +284,6 @@
       <li>List Item 3</li>
       <li>List Item 4</li>
       <li>List Item 5</li>
-
     </ul>
 
     <h3>Orderd List</h3>
@@ -315,13 +305,10 @@
     <h3>Definition</h3>
 
     <dl>
-
       <dt>Coffee</dt>
-        <dd>Black hot drink</dd>
-
+      <dd>Black hot drink</dd>
       <dt>Milk</dt>
-        <dd>White cold drink</dd>
-
+      <dd>White cold drink</dd>
     </dl>
 
   </section>
@@ -331,52 +318,32 @@
     <h3>Table</h3>
 
     <table class="table">
-
       <caption>Table Caption</caption>
-
       <colgroup>
-
         <col span="2" style="background-color: #ccc;">
         <col>
-
       </colgroup>
-
       <thead>
-
         <tr>
-
           <th>Item 1</th>
           <th>Item 2</th>
           <th>Item 3</th>
-
         </tr>
-
       </thead>
-
       <tfoot>
-
         <tr>
-
           <th>Item 1</th>
           <th>Item 2</th>
           <th>Item 3</th>
-
         </tr>
-
       </tfoot>
-
       <tbody>
-
         <tr>
-
           <th>Item 1</th>
           <th>Item 2</th>
           <th>Item 3</th>
-
         </tr>
-
       </tbody>
-
     </table>
 
   </section>
@@ -398,171 +365,87 @@
       <ul class="images">
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-                <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-              </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
       </ul>
@@ -578,10 +461,8 @@
     <div class="embed embed--16-9">
 
       <audio controls>
-
         <source src="audio.ogg" type="audio/ogg">
         <source src="../assets/audio/Guts and Bourbon.mp3" type="audio/mpeg">Your browser does not support the audio tag
-
       </audio>
 
     </div>
@@ -599,11 +480,9 @@
     <div class="embed embed--16-9">
 
       <video width="1920" height="1080" controls>
-
         <source src="../assets/video/fromtheearth.webm" type="video/webm">
         <source src="../assets/video/fromtheearth.mp4" type="video/mp4">
         <source src="video.ogg" type="video/ogg">Your browser does not support the video tag
-
       </video>
 
     </div>
@@ -638,10 +517,8 @@
     <h3>SWF</h3>
 
     <object type="application/x-shockwave-flash" data="assets/swf/swf.swf" width="100%" height="400">
-
       <param name="movie" value="assets/swf/swf.swf">
       <param name="quality" value="high">
-
     </object>
 
   </section>
@@ -1102,27 +979,21 @@
     <h3>Breadcrumb</h3>
 
     <nav class="breadcrumb">
-
       <ul>
-
         <li><a href="#">Level 1</a></li>
         <li><a href="#">Level 2</a></li>
         <li><a href="#">Level 3</a></li>
-
       </ul>
-
     </nav>
 
     <h3>Pagination</h3>
 
     <ul class="pagination">
-
       <li class="prev"><a href="#">←</a></li>
       <li><a href="#">1</a></li>
       <li><a href="#">2</a></li>
       <li><a href="#">3</a></li>
       <li class="next"><a href="#">→</a></li>
-
     </ul>
 
   </section>
@@ -1244,7 +1115,6 @@
     </div>
 
   </section>
-
 
 </div>
 
