--- a/source/ui.html
+++ b/source/ui.html
@@ -187,12 +187,15 @@
       <div class="media__body">
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
 
       </div>
 
     </div>
+
+    <pre><code>&lt;div class="media"&gt;
+  &lt;div class="media__obj media__obj--left"&gt;…&lt;/div&gt;
+  &lt;div class="media__body"&gt;…&lt;/div&gt;
+&lt;/div&gt;</code></pre>
 
     <h3>Media Right</h3>
 
@@ -205,30 +208,36 @@
       <div class="media__body">
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
 
       </div>
 
     </div>
 
+        <pre><code>&lt;div class="media"&gt;
+  &lt;div class="media__obj media__obj--right"&gt;…&lt;/div&gt;
+  &lt;div class="media__body"&gt;…&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+
     <h3>Media Center</h3>
 
     <div class="media media--center">
 
-      <figure class="media__obj media__obj--right">
+      <figure class="media__obj media__obj--left">
         <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
       </figure>
 
       <div class="media__body">
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
 
       </div>
 
     </div>
+
+        <pre><code>&lt;div class="media media--center"&gt;
+  &lt;div class="media__obj media__obj--left"&gt;…&lt;/div&gt;
+  &lt;div class="media__body"&gt;…&lt;/div&gt;
+&lt;/div&gt;</code></pre>
 
     <h3>Media Nested</h3>
 
@@ -241,8 +250,6 @@
       <div class="media__body">
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
 
         <div class="media">
 
@@ -253,8 +260,6 @@
           <div class="media__body">
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
 
           </div>
 
@@ -263,6 +268,18 @@
       </div>
 
     </div>
+
+    <pre><code>&lt;div class="media"&gt;
+  &lt;div class="media__obj media__obj--left"&gt;…&lt;/div&gt;
+  &lt;div class="media__body"&gt;
+
+    &lt;div class="media"&gt;
+      &lt;div class="media__obj media__obj--left"&gt;…&lt;/div&gt;
+      &lt;div class="media__body"&gt;…&lt;/div&gt;
+    &lt;/div&gt;
+
+  &lt;/div&gt;
+&lt;/div&gt;</code></pre>
 
   </section>
 
@@ -452,6 +469,16 @@
 
     </div>
 
+    <pre><code>&lt;div class="gallery"&gt;
+  &lt;ul class="images"&gt;
+    &lt;li&gt;
+      &lt;figure&gt;
+        &lt;a href="#" title=""&gt;&lt;img src="" width="" height="" alt=""&gt;&lt;/a&gt;
+      &lt;/figure&gt;
+    &lt;/li&gt;
+  &lt;/ul&gt;
+&lt;/div&gt;</code></pre>
+
   </section>
 
   <section id="media">
@@ -521,6 +548,10 @@
       <param name="quality" value="high">
     </object>
 
+    <pre><code>&lt;div class="embed embed--16-9"&gt;
+  …
+&lt;/div&gt;</code></pre>
+
   </section>
 
   <section id="buttons">
@@ -537,6 +568,15 @@
     <button class="btn btn--success">Button</button>
     <button class="btn btn--warning">Button</button>
     <button class="btn btn--error">Button</button>
+
+    <pre><code>&lt;button class="btn&gt;Button&lt;/button&gt;
+&lt;button class="btn btn--rounded&gt;Button Rounded&lt;/button&gt;
+&lt;button class="btn btn--pill&gt;Button Pill&lt;/button&gt;
+&lt;button class="btn btn--primary&gt;Button Primary&lt;/button&gt;
+&lt;button class="btn btn--secondary&gt;Button Secondary&lt;/button&gt;
+&lt;button class="btn btn--success&gt;Button Success&lt;/button&gt;
+&lt;button class="btn btn--warning&gt;Button Warning&lt;/button&gt;
+&lt;button class="btn btn--error&gt;Button Error&lt;/button&gt;</code></pre>
 
   </section>
 
@@ -881,6 +921,13 @@
 
     </form>
 
+    <pre><code>&lt;form class="form"&gt;
+  &lt;div class="form__field"&gt;
+  &lt;label for=""&gt;Label&lt;/label&gt;
+  &lt;input type="text" name=""&gt;
+  &lt;/div&gt;
+&lt;/form&gt;</code></pre>
+
   </section>
 
   <section>
@@ -929,6 +976,12 @@
 
     </nav>
 
+    <pre><code>&lt;nav class="navigation"&gt;
+  &lt;ul&gt;
+    &lt;li&gt;&lt;a href="#"&gt;Item&lt;/a&gt;&lt;/li&gt;
+  &lt;/ul&gt;
+&lt;/nav&gt;</code></pre>
+
     <h3>Navigation Dropdown Right</h3>
 
     <nav class="nav nav--dropdown nav--dropdown--right">
@@ -969,6 +1022,12 @@
       </ul>
     </nav>
 
+    <pre><code>&lt;nav class="breadcrumb"&gt;
+  &lt;ul&gt;
+    &lt;li&gt;&lt;a href="#"&gt;Item&lt;/a&gt;&lt;/li&gt;
+  &lt;/ul&gt;
+&lt;/nav&gt;</code></pre>
+
     <h3>Pagination</h3>
 
     <ul class="pagination">
@@ -978,6 +1037,12 @@
       <li><a href="#">3</a></li>
       <li class="next"><a href="#">→</a></li>
     </ul>
+
+    <pre><code>&lt;ul class="pagination"&gt;
+  &lt;li class="prev"&gt;&lt;a href="#"&gt;←&lt;/a&gt;&lt;/li&gt;
+  &lt;li&gt;&lt;a href="#"&gt;1&lt;/a&gt;&lt;/li&gt;
+  &lt;li class="next"&gt;&lt;a href="#"&gt;→&lt;/a&gt;&lt;/li&gt;
+&lt;/ul&gt;</code></pre>
 
   </section>
 
@@ -1096,6 +1161,24 @@
       <div class="grid__col grid__col--12">col--12</div>
 
     </div>
+
+    <pre><code>&lt;div class="grid__row"&gt;
+  &lt;div class="grid__col grid__col--3"&gt;…&lt;/div&gt;
+  &lt;div class="grid__col grid__col--3"&gt;…&lt;/div&gt;
+  &lt;div class="grid__col grid__col--3"&gt;…&lt;/div&gt;
+  &lt;div class="grid__col grid__col--3"&gt;…&lt;/div&gt;
+&lt;/div&gt;
+
+&lt;div class="grid__row"&gt;
+  &lt;div class="grid__col grid__col--4"&gt;…&lt;/div&gt;
+  &lt;div class="grid__col grid__col--4"&gt;…&lt;/div&gt;
+  &lt;div class="grid__col grid__col--4"&gt;…&lt;/div&gt;
+&lt;/div&gt;
+
+&lt;div class="grid__row"&gt;
+  &lt;div class="grid__col grid__col--6"&gt;…&lt;/div&gt;
+  &lt;div class="grid__col grid__col--6"&gt;…&lt;/div&gt;
+&lt;/div&gt;</code></pre>
 
   </section>
 
